fixed scrollbar position in presets view

--- a/public/sass/sprd.scss
+++ b/public/sass/sprd.scss
@@ -108,10 +108,6 @@
     transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
 
-    -webkit-box-shadow: -3px 0px 36px 0px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: -3px 0px 36px 0px rgba(0, 0, 0, 0.42);
-    box-shadow: -3px 0px 36px 0px rgba(0, 0, 0, 0.42);
-
     -webkit-transition: -webkit-transform 0.3s;
     -moz-transition: -moz-transform 0.3s;
     -ms-transition: -ms-transform 0.3s;
